:sparkles: now LoginInfo contains SSO Data, especially regarding brokering
